--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,9 +1,4 @@
-<h1>Články</h1>
-
-<% @categories.each do |category| %>
-  <%= link_to category.name, category %>
-  |
-<% end %>
+<h2><%= @category.name %></h2>
 
 <% @posts.each do |post| %>
   <h3><%= link_to post.title, post_path(post) %></h3>
