--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -9,6 +9,7 @@
   <thead>
     <tr>
       <th>Nazov</th>
+      <th>Kategória</th>
       <th>Publikovane</th>
       <th>Akcie</th>
     </tr>
@@ -19,6 +20,7 @@
     <% @posts.each do |post| %>
     <tr>
       <td><%= post.title %></td>
+      <td><%= post.category.name %></td>
       <td><%= post.published %></td>
       <td><%= link_to "Upravit", edit_admin_post_path(post) %></td>
     </tr>
