--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -6,6 +6,11 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :category_id %>
+    <%= f.select :category_id, Category.all.map{ |c| [c.name, c.id] }, {prompt: "Vyber"}, {class: "form-control"} %>
+  </div>
+
+  <div class="form-group">
     <%= f.label :body %>
     <%= f.text_area :body, class: "form-control ckeditor", rows: 10 %>
   </div>
