--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -20,7 +20,7 @@
     <% @posts.each do |post| %>
     <tr>
       <td><%= post.title %></td>
-      <td><%= post.category.name %></td>
+      <td><%= post.category.try(:name) %></td>
       <td><%= post.published %></td>
       <td><%= link_to "Upravit", edit_admin_post_path(post) %></td>
     </tr>
