current_admin method implemented

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+<%= current_admin.email if current_admin %>
+
 <div class="header admin">
   <div class="container">
     <ul class="nav nav-pills">
