--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,5 +1,5 @@
 <ul class="nav nav-pills">
-  <% @items.each do |title, path| %>
+  <% @navigation_items.each do |title, path| %>
     <li class="<%= request.path == path ? "active" : "" %>"> <%= link_to title, path %> </li>
   <% end %>
 </ul>
