--- a/app/views/cart_items/index.html.erb
+++ b/app/views/cart_items/index.html.erb
@@ -1,8 +1,8 @@
-<h1>Nakupny kosik</h1>
+<h1><%= t('.title') %></h1>
 
 <% if @items.empty? %>
   <div class="alert alert-info">
-    Košík je prázdny.
+    <%= t(".empty_cart") %>
   </div>
 <% else %>
   <table class="table">
