--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -10,6 +10,8 @@
 
 <%= current_admin.email if current_admin %>
 
+<p>JAZYK: <%= I18n.locale %></p>
+
 <div class="header admin">
   <div class="container">
     <ul class="nav nav-pills">
