Upload images to product - via carrierwave

--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -8,6 +8,7 @@
 
   <thead>
     <tr>
+      <th>Obrazok</th>
       <th>Nazov</th>
       <th>Cena</th>
       <th>Pridane</th>
@@ -19,6 +20,7 @@
 
     <% @products.each do |product| %>
     <tr>
+      <td><%= image_tag product.image.url, class: 'product-image' %></td>
       <td><%= product.name %></td>
       <td><%= number_to_currency product.price %></td>
       <td><%= l product.created_at, format: :short %></td>
