--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -27,6 +27,11 @@
     <%= f.text_field :price, class: "form-control" %>
   </div>
 
+  <div class="form-group">
+    <%= f.label :image %>
+    <%= f.file_field :image %>
+  </div>
+
   <!--
   <div class="form-group">
     <%= f.label :description %>
