--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -1,3 +1,25 @@
-// Place all the styles related to the products controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.well.product {
+  text-align: center;
+  h3 {
+    margin: 0 0 15px 0;
+    font-size: 150%;
+  }
+
+  a.product-image {
+    margin-bottom: 25px;
+    display: inline-block;
+    img {
+      border: 1px solid silver;
+      padding: 5px;
+      background-color: #fff
+    }
+  }
+
+  p.product-price {
+    margin-bottom: 25px;
+    span {
+      font-size: 130%;
+      font-weight: bold;
+    }
+  }
+}
