--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,11 +1,13 @@
-<div class="well">
-  <h4><%= product.name %></h4>
+<div class='col-md-3'>
+  <div class='well product'>
+    <h3><%= product.name %></h3>
 
-  <%= link_to image_tag(product.image.thumb.url), product.image.url, class: 'fancybox' %>
+    <%= link_to image_tag(product.image.thumb.url), product.image.url, class: 'product-image fancybox' %>
 
-  <p>
-    Cena: <%= number_to_currency product.price, unit: '€', format: '%n %u', separator: ',' %>
-  </p>
+    <p class='product-price'>
+      Cena: <span><%= number_to_currency product.price, unit: '€', format: '%n %u', separator: ',' %></span>
+    </p>
 
-  <%= button_to 'Pridať do košíka', cart_items_path(product_id: product.id), class: "btn btn-primary btn-xs" %>
+    <%= button_to 'Pridať do košíka', cart_items_path(product_id: product.id), class: "btn btn-primary" %>
+  </div>
 </div>
