--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -1,5 +1,7 @@
 .well.product {
   text-align: center;
+  transition: all 0.2s ease;
+
   h3 {
     margin: 0 0 15px 0;
     font-size: 150%;
@@ -21,5 +23,10 @@
       font-size: 130%;
       font-weight: bold;
     }
+  }
+
+  &:hover {    
+    /*-webkit-transform: rotate(3deg) translate(5px, 5px);*/
+    -webkit-transform: scale(1.03);
   }
 }
