--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,20 @@
 </div>
 
 <div class="container">
+  <% if flash[:notice] %>
+    <div class='alert alert-success'>
+      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+      <%= flash[:notice] %>
+    </div>
+  <% end %>
+
+  <% if flash[:alert] %>
+    <div class='alert alert-danger'>
+      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+      <%= flash[:alert] %>
+    </div>
+  <% end %>
+
   <%= yield %>
 </div>
 
