--- a/app/views/user_registrations/_form.html.erb
+++ b/app/views/user_registrations/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for(@user) do |f| %>
+<%= form_for(@user, url: user_registrations_path) do |f| %>
+
   <% if @user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -17,11 +18,11 @@
   </div>
   <div class="field">
     <%= f.label :password %><br>
-    <%= f.text_field :password %>
+    <%= f.password_field :password %>
   </div>
   <div class="field">
     <%= f.label :password_confirmation %><br>
-    <%= f.text_field :password_confirmation %>
+    <%= f.password_field :password_confirmation %>
   </div>
 
   <hr/>
