Save order and items for user

--- a/app/views/cart_items/index.html.erb
+++ b/app/views/cart_items/index.html.erb
@@ -20,4 +20,20 @@
       <%= render partial: 'item', collection: @items %>
     </tbody>
   </table>
+
+  <%= button_to "Objednat produkty v košíku", orders_path, class: 'btn btn-primary', data: { confirm: 'Kliknutim na OK potvrdte objednavku.' } %>
 <% end %>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
