--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -18,6 +18,7 @@
       <li class="active"><%= link_to "Home", "#" %></li>
       <li><%= link_to "Články", admin_posts_path %></li>
       <li><%= link_to "Produkty", admin_products_path %></li>
+      <li><%= link_to "Objednavky", admin_orders_path %></li>
 
       <li class="pull-right"><%= link_to "Odhlasit sa", admin_session_path(1), method: "delete" %></li>
     </ul>
